# OpenCV_Project

./: CMakeLists.txt  README  Setup  main.cpp
